--- a/app/src/main/res/layout/activity_edit_information.xml
+++ b/app/src/main/res/layout/activity_edit_information.xml
@@ -18,6 +18,7 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:fontFamily="@font/vazir_medium"
             android:id="@+id/ed_edit_name"
             android:layout_marginLeft="30dp"
             android:inputType="text"
@@ -37,6 +38,7 @@
             android:layout_height="match_parent"
             android:inputType="text"
             android:maxLines="1"
+            android:fontFamily="@font/vazir_medium"
             android:id="@+id/ed_edit_family"
             android:maxLength="40"
             android:layout_marginLeft="30dp"
@@ -55,6 +57,7 @@
             android:layout_height="match_parent"
             android:maxLines="1"
             android:maxLength="30"
+            android:fontFamily="@font/vazir_medium"
             android:id="@+id/ed_edit_email"
             android:inputType="textEmailAddress"
             android:layout_marginLeft="30dp"
@@ -75,6 +78,7 @@
             android:layout_height="match_parent"
             android:layout_width="match_parent"
             android:maxLength="500"
+            android:fontFamily="@font/vazir_medium"
             android:maxLines="5"
             android:hint="@string/address"
             />
@@ -85,6 +89,7 @@
         android:id="@+id/btn_edit_edit_activity"
         android:layout_height="wrap_content"
         android:text="@string/edit_information"
+        android:fontFamily="@font/vazir_medium"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="50dp"
         android:textSize="@dimen/text_size_big"
