--- a/app/src/main/res/layout/activity_basket.xml
+++ b/app/src/main/res/layout/activity_basket.xml
@@ -39,9 +39,10 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight=".5"
+                android:fontFamily="@font/vazir_medium"
                 android:layout_marginRight="10dp"
                 android:textColor="@color/white"
-                android:textSize="17sp"
+                android:textSize="13sp"
                 android:text="قیمت کل سبد خرید شما :"
                 android:gravity="right|center_vertical"
                 />
@@ -54,7 +55,8 @@
                 android:gravity="center_vertical|center"
                 android:layout_marginLeft="10dp"
                 android:id="@+id/txt_total"
-                android:textSize="20sp"
+                android:fontFamily="@font/vazir_medium"
+                android:textSize="@dimen/txt_size_title_activity_show"
                 android:textColor="@color/white"
                 tools:text="10000"
                 android:layout_height="match_parent"
