--- a/app/src/main/res/layout/activity_favorite.xml
+++ b/app/src/main/res/layout/activity_favorite.xml
@@ -32,6 +32,7 @@
                 android:layout_height="match_parent" />
             <TextView
                 android:layout_width="wrap_content"
+                android:fontFamily="@font/vazir_medium"
                 android:layout_marginStart="@dimen/small_margin"
                 android:layout_height="wrap_content"
                 android:text=" ترتیب بندی"/>
