--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -34,6 +34,7 @@
                 android:layout_width="wrap_content"
                 android:layout_marginStart="@dimen/small_margin"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/vazir_medium"
                 android:text=" ترتیب بندی"/>
 
         </LinearLayout>
