--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,14 +18,17 @@
         android:layout_height="match_parent">
         <EditText
             android:layout_width="match_parent"
+            android:fontFamily="@font/vazir_medium"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/ic_phone_android_black_24dp"
             android:drawablePadding="10dp"
             android:layout_marginStart="20dp"
-            android:gravity="start"
+            android:layout_gravity="start"
+            android:gravity="right"
             android:id="@+id/ed_phone_login"
             android:inputType="phone"
             android:maxLines="1"
+            android:textSize="@dimen/txt_size_title_activity_show"
             android:maxLength="11"
             android:drawableTint="@color/gray"
             android:layout_marginEnd="20dp"
@@ -38,8 +41,10 @@
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/ic_lock_open_black_24dp"
             android:drawablePadding="10dp"
+            android:fontFamily="@font/vazir_medium"
             android:layout_marginStart="20dp"
             android:gravity="end"
+            android:textSize="@dimen/txt_size_title_activity_show"
             android:id="@+id/ed_pass_login"
             android:inputType="numberPassword"
             android:maxLines="1"
@@ -56,6 +61,7 @@
             android:layout_marginTop="10dp"
             android:layout_gravity="start"
             android:id="@+id/chk_show_pass_login"
+            android:fontFamily="@font/vazir_medium"
             android:layout_height="wrap_content"
             android:text="@string/showpassword"/>
 
@@ -65,18 +71,19 @@
             android:id="@+id/txt_forgot_password"
             android:layout_marginTop="20dp"
             android:text="@string/forgot_password"
+            android:fontFamily="@font/vazir_medium"
             android:gravity="center"
-            android:textSize="15sp"
-            android:textColor="@color/black"/>
+            android:textSize="@dimen/txt_size_title_activity_show" />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="@string/didnt_register_yet"
             android:gravity="center"
+            android:fontFamily="@font/vazir_medium"
             android:id="@+id/txt_register"
             android:textStyle="bold"
-            android:textSize="15sp"
+            android:textSize="@dimen/txt_size_title_activity_show"
             android:textColor="#9E1515"/>
     </LinearLayout>
     <android.support.v7.widget.CardView
@@ -92,10 +99,11 @@
             android:layout_height="match_parent"
             android:background="@color/green"
             android:gravity="center_vertical"
+            android:fontFamily="@font/vazir_medium"
             android:text="@string/welcometo_bookstore"
             android:textAlignment="center"
             android:textColor="@color/white"
-            android:textSize="18sp" />
+            android:textSize="@dimen/txt_size_title_activity_show" />
     </android.support.v7.widget.CardView>
 
 </RelativeLayout>
