--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -18,8 +18,10 @@
         <Button
             android:layout_width="200dp"
             android:textColor="@color/white"
-            android:textSize="@dimen/text_size_big"
+            android:textSize="@dimen/txt_size_title_item_shows"
             android:background="@drawable/shape_btn_edit_profile"
+            android:fontFamily="@font/vazir_medium"
+
             android:id="@+id/btn_edit_profile"
             android:layout_height="wrap_content"
             android:text="@string/edit_information"
@@ -28,18 +30,22 @@
         <Button
             android:layout_width="200dp"
             android:textColor="@color/white"
-            android:textSize="@dimen/text_size_big"
+            android:textSize="@dimen/txt_size_title_item_shows"
             android:background="@drawable/shape_btn_favorite_profile"
             android:id="@+id/btn_favorite_profile"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/vazir_medium"
+
             android:text="@string/favorite"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/large_margin"/>
         <Button
             android:layout_width="200dp"
             android:textColor="@color/white"
-            android:textSize="@dimen/text_size_big"
+            android:textSize="@dimen/txt_size_title_item_shows"
             android:background="@drawable/shape_btn_exit_profile"
+            android:fontFamily="@font/vazir_medium"
+
             android:id="@+id/btn_exit_profile"
             android:layout_height="wrap_content"
             android:text="@string/exit_profile"
