--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -34,10 +34,11 @@
                 android:layout_width="match_parent"
                 android:id="@+id/txt_image_user_register"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/vazir_medium"
                 android:gravity="center_horizontal"
                 android:layout_marginTop="10dp"
                 android:textColor="@color/black"
-                android:textSize="@dimen/text_size_standard"
+                android:textSize="@dimen/txt_size_title_activity_show"
                 android:text="@string/get_image"/>
 
 
@@ -46,6 +47,8 @@
                 android:layout_height="wrap_content"
                 android:drawableStart="@drawable/ic_phone_android_black_24dp"
                 android:drawablePadding="10dp"
+                android:fontFamily="@font/vazir_medium"
+                android:textSize="@dimen/txt_size_title_activity_show"
                 android:layout_marginStart="20dp"
                 android:gravity="start"
                 android:inputType="phone"
@@ -64,6 +67,8 @@
                 android:drawablePadding="10dp"
                 android:layout_marginStart="20dp"
                 android:gravity="start"
+                android:fontFamily="@font/vazir_medium"
+                android:textSize="@dimen/txt_size_title_activity_show"
                 android:inputType="textEmailAddress"
                 android:id="@+id/ed_email_register"
                 android:maxLines="1"
@@ -82,6 +87,8 @@
                 android:layout_marginStart="20dp"
                 android:gravity="end"
                 android:inputType="numberPassword"
+                android:fontFamily="@font/vazir_medium"
+                android:textSize="@dimen/txt_size_title_activity_show"
                 android:id="@+id/ed_password_register"
                 android:maxLines="1"
                 android:maxLength="20"
@@ -98,6 +105,8 @@
                 android:layout_marginStart="20dp"
                 android:gravity="center_vertical"
                 android:inputType="textMultiLine"
+                android:fontFamily="@font/vazir_medium"
+                android:textSize="@dimen/txt_size_title_activity_show"
                 android:id="@+id/ed_address_register"
                 android:lines="3"
                 android:maxLines="5"
@@ -114,6 +123,8 @@
                 android:layout_marginTop="10dp"
                 android:layout_gravity="start"
                 android:id="@+id/chk_show_pass_register"
+                android:fontFamily="@font/vazir_medium"
+                android:textSize="@dimen/txt_size_title_activity_show"
                 android:layout_height="wrap_content"
                 android:text="@string/showpassword"/>
         </LinearLayout>
@@ -134,8 +145,9 @@
             android:gravity="center_vertical"
             android:text="@string/register"
             android:textAlignment="center"
+            android:textSize="@dimen/txt_size_title_activity_show"
             android:textColor="@color/white"
-            android:textSize="@dimen/text_size_big" />
+            android:fontFamily="@font/vazir_medium" />
     </android.support.v7.widget.CardView>
 
 
