--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -26,6 +26,17 @@
             custom:indicator_visibility="visible"
             android:layout_width="match_parent"
             android:layout_height="200dp"/>
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scrollbars="none"
+            android:layoutDirection="rtl"
+            android:layout_marginLeft="6dp"
+            android:layout_marginRight="6dp"
+            android:id="@+id/recyc_cat_little">
+        </android.support.v7.widget.RecyclerView>
+
         <android.support.v7.widget.CardView
             android:layout_width="300dp"
             app:cardCornerRadius="4dp"
@@ -37,7 +48,7 @@
             tools:targetApi="lollipop">
             <LinearLayout
                 android:layout_width="match_parent"
-                android:background="@color/green"
+                android:background="@color/colorPrimary"
 
                 android:gravity="center_vertical|center"
                 android:orientation="horizontal"
@@ -50,6 +61,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:textColor="@color/white"
+                    android:fontFamily="@font/vazir_medium"
                     android:gravity="center"
                     android:layout_marginStart="8dp"
                     android:layout_height="match_parent"
@@ -77,12 +89,24 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
+                android:textColor="@color/color_txt_title_recyc_mainactivity"
+                android:fontFamily="@font/vazir_medium"
                 android:layout_marginStart="4dp"
                 android:layout_marginBottom="12dp"
+                android:paddingEnd="16dp"
                 android:text="@string/offers"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 />
+            <TextView
+                android:layout_width="match_parent"
+                android:id="@+id/txt_list_offs"
+                android:layout_height="match_parent"
+                android:fontFamily="@font/vazir_medium"
+                android:textColor="@color/colorPrimary"
+                android:layout_marginEnd="16dp"
+                android:text="@string/full_list"
+                android:gravity="center_vertical|end"/>
         </LinearLayout>
 
         <android.support.v7.widget.RecyclerView
@@ -109,10 +133,12 @@
                 android:layout_marginTop="12dp"
                 android:layout_marginStart="4dp"
                 android:layout_marginBottom="12dp"
+                android:textColor="@color/color_txt_title_recyc_mainactivity"
                 android:text="@string/category"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                />
+                android:fontFamily="@font/vazir_medium"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
         </LinearLayout>
 
 
@@ -128,13 +154,13 @@
         </android.support.v7.widget.RecyclerView>
 
 
-        <ImageView
-            android:layout_marginTop="10dp"
-            android:id="@+id/img_big_banner"
+        <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
-            android:src="@drawable/banner4"
-            android:scaleType="fitXY"
-            android:layout_height="140dp" />
+            android:layout_height="wrap_content"
+            android:id="@+id/recycler_banner_big"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="3dp"
+            android:layoutDirection="rtl"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_marginTop="5dp"
@@ -142,30 +168,13 @@
             android:layout_height="140dp"
             android:baselineAligned="false">
 
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_weight=".5"
-                android:layout_margin="1dp"
-                android:layout_height="match_parent">
-                <ImageView
-                    android:id="@+id/img_right_small_banner"
-                    android:src="@drawable/banner3"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scaleType="fitXY"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_weight=".5"
-                android:layout_margin="1dp"
-                android:layout_height="match_parent">
-                <ImageView
-                    android:src="@drawable/banner2"
-                    android:id="@+id/img_left_small_banner"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scaleType="fitXY"/>
-            </LinearLayout>
+            <android.support.v7.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/recycler_banner"
+                android:layout_marginTop="5dp"
+                android:layout_marginStart="3dp"
+                android:layoutDirection="rtl"/>
         </LinearLayout>
 
         <LinearLayout
@@ -183,9 +192,21 @@
                 android:layout_marginStart="4dp"
                 android:layout_marginBottom="12dp"
                 android:text="@string/only_in_samed"
-                android:textSize="16sp"
+                android:textSize="14sp"
+                android:textColor="@color/color_txt_title_recyc_mainactivity"
+                android:fontFamily="@font/vazir_medium"
                 android:textStyle="bold"
                 />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fontFamily="@font/vazir_medium"
+                android:textColor="@color/colorPrimary"
+                android:id="@+id/txt_list_only"
+                android:layout_marginEnd="16dp"
+                android:text="@string/full_list"
+                android:gravity="center_vertical|end"/>
         </LinearLayout>
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
@@ -211,10 +232,21 @@
                 android:layout_marginTop="12dp"
                 android:layout_marginStart="4dp"
                 android:layout_marginBottom="12dp"
+                android:textColor="@color/color_txt_title_recyc_mainactivity"
                 android:text="@string/mostvisited"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 android:textStyle="bold"
+                android:fontFamily="@font/vazir_medium"
                 />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/txt_list_most_visit"
+                android:fontFamily="@font/vazir_medium"
+                android:textColor="@color/colorPrimary"
+                android:layout_marginEnd="16dp"
+                android:text="@string/full_list"
+                android:gravity="center_vertical|end"/>
         </LinearLayout>
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
@@ -240,10 +272,22 @@
                 android:layout_marginTop="12dp"
                 android:layout_marginStart="4dp"
                 android:layout_marginBottom="12dp"
+                android:textColor="@color/color_txt_title_recyc_mainactivity"
                 android:text="@string/most_sold"
-                android:textSize="16sp"
+                android:fontFamily="@font/vazir_medium"
+                android:textSize="14sp"
                 android:textStyle="bold"
                 />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:id="@+id/txt_list_most_sold"
+                android:layout_height="match_parent"
+                android:fontFamily="@font/vazir_medium"
+                android:textColor="@color/colorPrimary"
+                android:layout_marginEnd="16dp"
+                android:text="@string/full_list"
+                android:gravity="center_vertical|end"/>
         </LinearLayout>
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
