--- a/app/src/main/res/layout/item_show_item_product.xml
+++ b/app/src/main/res/layout/item_show_item_product.xml
@@ -5,7 +5,6 @@
     android:layout_margin="5dp"
     app:cardBackgroundColor="@color/bg_for_itemshow"
     android:clickable="true"
-    android:foreground="?attr/selectableItemBackground"
     android:layoutDirection="rtl"
     android:id="@+id/card_item_product"
     xmlns:tools="http://schemas.android.com/tools"
@@ -38,12 +37,13 @@
             android:orientation="horizontal">
             <TextView
                 android:layout_width="wrap_content"
-                android:textColor="@color/black"
                 android:ellipsize="end"
                 android:layout_marginTop="@dimen/margin_itemshow_product"
+                android:fontFamily="@font/vazir_medium"
                 android:maxLines="1"
                 android:id="@+id/txt_title_item_product"
                 android:layout_marginBottom="@dimen/margin_itemshow_product"
+                android:textSize="@dimen/txt_size_title_item_shows"
                 android:layout_marginStart="10dp"
                 tools:text="نخل ونارنج"
                 android:gravity="center_vertical|start"
@@ -51,9 +51,10 @@
                 android:layout_weight=".5"/>
             <TextView
                 android:layout_width="wrap_content"
-                android:textColor="@color/black"
+                android:fontFamily="@font/vazir_medium"
                 android:ellipsize="end"
                 android:layout_marginTop="@dimen/margin_itemshow_product"
+                android:textSize="@dimen/txt_size_title_item_shows"
                 android:maxLines="1"
                 android:id="@+id/txt_visit_item_product"
                 android:layout_marginBottom="@dimen/margin_itemshow_product"
@@ -62,7 +63,7 @@
                 android:layout_gravity="center_vertical"
                 android:layout_height="wrap_content"/>
             <ImageView
-                android:layout_width="wrap_content"
+                android:layout_width="@dimen/width_icon_visit"
                 android:src="@drawable/ic_visibility_black_24dp"
                 android:layout_marginTop="@dimen/margin_itemshow_product"
                 android:layout_marginBottom="@dimen/margin_itemshow_product"
@@ -90,11 +91,12 @@
             android:layout_marginBottom="@dimen/margin_itemshow_product"
             android:layout_height="wrap_content">
             <TextView
-                android:textColor="@color/black"
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:layout_width="0dp"
+                android:textSize="@dimen/txt_size_title_item_shows"
                 android:layout_weight=".5"
+                android:fontFamily="@font/vazir_medium"
                 android:textAlignment="center"
                 android:id="@+id/txt_authur_item_product"
                 android:layout_marginEnd="10dp"
@@ -103,9 +105,10 @@
                 android:layout_height="wrap_content" />
 
             <TextView
-                android:textColor="@color/black"
                 android:ellipsize="end"
                 android:maxLines="1"
+                android:fontFamily="@font/vazir_medium"
+                android:textSize="@dimen/txt_size_title_item_shows"
                 android:layout_width="0dp"
                 android:layout_weight="0.5"
                 android:textAlignment="center"
@@ -132,7 +135,9 @@
                 android:layout_width="0dp"
                 android:layout_weight="0.5"
                 android:textColor="@color/green"
+                android:fontFamily="@font/vazir_medium"
                 android:ellipsize="end"
+                android:textSize="@dimen/txt_size_title_item_shows"
                 android:maxLines="1"
                 android:textAlignment="center"
                 android:layout_marginTop="@dimen/margin_itemshow_product"
@@ -147,8 +152,10 @@
                 android:layout_weight="0.5"
                 android:textColor="@color/green"
                 android:ellipsize="end"
+                android:textSize="@dimen/txt_size_title_item_shows"
                 android:maxLines="1"
                 android:textAlignment="center"
+                android:fontFamily="@font/vazir_medium"
                 android:layout_marginTop="@dimen/margin_itemshow_product"
                 android:layout_marginBottom="@dimen/margin_itemshow_product"
                 android:id="@+id/txtprice_off_item_product"
@@ -162,9 +169,10 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:textColor="@color/black"
+            android:fontFamily="@font/vazir_medium"
             android:ellipsize="end"
             android:lines="1"
+            android:textSize="@dimen/txt_size_title_item_shows"
             android:layout_marginEnd="@dimen/standard_margin"
             android:id="@+id/txt_description_item_product"
             android:layout_marginBottom="@dimen/standard_margin"
