--- a/app/src/main/res/layout/item_show_off.xml
+++ b/app/src/main/res/layout/item_show_off.xml
@@ -6,7 +6,7 @@
     android:layout_width="170dp"
     android:id="@+id/cardview_product"
     android:background="@color/bg_for_itemshow"
-    android:layout_height="220dp"
+    android:layout_height="230dp"
     android:layout_margin="@dimen/standard_margin"
     android:layoutDirection="rtl"
     app:cardCornerRadius="5dp"
@@ -15,15 +15,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center|bottom"
         android:orientation="vertical">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <ImageView
                 android:id="@+id/img_product"
                 android:layout_width="match_parent"
+                android:layout_alignParentTop="true"
                 android:layout_height="170dp"
                 tools:src="@drawable/side_nav_bar"
                 android:scaleType="centerInside"/>
@@ -48,29 +49,33 @@
         </RelativeLayout>
 
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:layout_gravity="start"
             android:layout_height="20dp">
             <View
                 android:layout_width="2dp"
                 android:id="@+id/vieww"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
                 android:background="#272727"
                 />
 
             <TextView
                 android:id="@+id/txt_title_product"
-                android:textSize="@dimen/text_size_very_small"
+                android:textSize="@dimen/txt_size_title_item_shows"
                 android:layout_marginTop="@dimen/small_margin"
-                android:layout_toEndOf="@id/vieww"
+                android:fontFamily="@font/vazir_medium"
                 android:textStyle="bold"
+                android:gravity="start|bottom"
+                android:layout_gravity="center_horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/standard_margin"
-                tools:text="ماجرای فکری آوینی" />
+                tools:text="ماجرای فکری آوینی"
+                tools:ignore="SmallSp" />
 
-        </RelativeLayout>
+        </LinearLayout>
 
 
         <LinearLayout
@@ -80,11 +85,12 @@
 
             android:orientation="horizontal">
             <TextView
-                android:textSize="@dimen/text_size_very_small"
+                android:textSize="@dimen/txt_size_price_item_show_product"
                 android:id="@+id/txt_price_product"
                 android:gravity="start"
                 android:textColor="@color/green"
                 android:layout_width="0dp"
+                android:fontFamily="@font/vazir_medium"
                 android:layout_marginStart="@dimen/standard_margin"
                 android:layout_weight=".5"
                 android:layout_height="wrap_content"
@@ -98,27 +104,30 @@
                 android:gravity="end|center_vertical"
                 android:layout_height="match_parent">
                 <ImageView
-                    android:layout_width="20dp"
+                    android:layout_width="@dimen/width_icon_visit"
                     android:src="@drawable/ic_visibility_black_24dp"
                     android:layout_height="20dp" />
+
                 <TextView
-                    android:layout_width="20dp"
                     android:id="@+id/txt_visit_product"
-                    android:gravity="center_vertical"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_marginStart="3dp"
                     android:layout_marginEnd="8dp"
-                    android:textSize="@dimen/text_size_very_small"
-                    android:layout_height="match_parent"
-                    tools:text="20"/>
+                    android:fontFamily="@font/vazir_medium"
+                    android:gravity="center_vertical"
+                    android:textSize="@dimen/txt_size_num_visit"
+                    tools:text="20" />
             </LinearLayout>
 
         </LinearLayout>
 
         <TextView
-            android:layout_gravity="start|bottom"
+            android:layout_gravity="start"
             android:textSize="@dimen/text_size_very_small"
+            android:fontFamily="@font/vazir_medium"
             android:id="@+id/txt_price_off"
-            android:gravity="bottom"
+            android:gravity="center|start|bottom"
             android:textColor="@color/red"
             android:layout_width="match_parent"
             android:layout_marginStart="@dimen/standard_margin"
