--- a/app/src/main/res/layout/item_show_product.xml
+++ b/app/src/main/res/layout/item_show_product.xml
@@ -61,9 +61,10 @@
 
             <TextView
                 android:id="@+id/txt_title_product"
-                android:textSize="@dimen/text_size_very_small"
+                android:textSize="@dimen/txt_size_title_item_shows"
                 android:layout_marginTop="@dimen/small_margin"
                 android:layout_toEndOf="@id/vieww"
+                android:fontFamily="@font/vazir_medium"
                 android:textStyle="bold"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -80,11 +81,12 @@
 
             android:orientation="horizontal">
             <TextView
-                android:textSize="@dimen/text_size_very_small"
+                android:textSize="@dimen/txt_size_price_item_show_product"
                 android:id="@+id/txt_price_product"
                 android:gravity="start"
                 android:textColor="@color/green"
                 android:layout_width="0dp"
+                android:fontFamily="@font/vazir_medium"
                 android:layout_marginStart="@dimen/standard_margin"
                 android:layout_weight=".5"
                 android:layout_height="wrap_content"
@@ -98,16 +100,17 @@
                 android:gravity="end|center_vertical"
                 android:layout_height="match_parent">
                 <ImageView
-                    android:layout_width="20dp"
+                    android:layout_width="@dimen/width_icon_visit"
                     android:src="@drawable/ic_visibility_black_24dp"
                     android:layout_height="20dp" />
                 <TextView
-                    android:layout_width="20dp"
+                    android:layout_width="wrap_content"
                     android:id="@+id/txt_visit_product"
                     android:gravity="center_vertical"
                     android:layout_marginStart="3dp"
+                    android:fontFamily="@font/vazir_medium"
                     android:layout_marginEnd="8dp"
-                    android:textSize="@dimen/text_size_very_small"
+                    android:textSize="@dimen/txt_size_num_visit"
                     android:layout_height="match_parent"
                     android:text="20"/>
             </LinearLayout>
