--- a/app/src/main/res/layout/item_view_category.xml
+++ b/app/src/main/res/layout/item_view_category.xml
@@ -6,9 +6,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="200dp"
+    android:layout_width="150dp"
     android:layout_height="150dp"
-    android:layout_margin="4dp"
+    android:layout_margin="16dp"
     app:cardCornerRadius="@dimen/standard_margin"
     app:cardElevation="@dimen/standard_elevation">
 
@@ -24,11 +24,12 @@
     <TextView
         android:layout_width="match_parent"
         android:id="@+id/txt_title_category"
+        android:fontFamily="@font/vazir_medium"
         android:layout_height="wrap_content"
         android:padding="3dp"
         android:layout_alignParentBottom="true"
         android:gravity="center_horizontal"
-        android:textSize="@dimen/text_size_small"
+        android:textSize="@dimen/txt_size_title_item_shows"
         android:textColor="@color/white"
         android:background="#8D726767"/>
 
