--- a/app/src/main/res/layout/toolbar_activity_show.xml
+++ b/app/src/main/res/layout/toolbar_activity_show.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.Toolbar
-    android:id="@+id/toolbar"
+<android.support.v7.widget.Toolbar android:id="@+id/toolbar"
     android:layoutDirection="rtl"
     android:layout_width="match_parent"
     app:layout_collapseMode="pin"
@@ -8,7 +7,8 @@
     android:layout_height="?attr/actionBarSize"
     android:background="@android:color/transparent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
         <LinearLayout
             android:layout_width="match_parent"
             android:orientation="horizontal"
@@ -23,6 +23,17 @@
                     android:tint="@color/gray"
                     android:layout_height="match_parent"
                     android:src="@drawable/ic_arrow_forward_black_24dp"/>
+
+                <TextView
+                    android:id="@+id/txt_title_book_toolbar_show"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="@dimen/standard_margin"
+                    android:fontFamily="@font/vazir_medium"
+                    android:gravity="center"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    tools:text="کتاب راه نوین" />
             </LinearLayout>
             <LinearLayout
                 android:layout_width="0dp"
@@ -43,13 +54,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/gray"
+                    android:fontFamily="@font/vazir_medium"
                     android:text="0"
-                    android:textSize="@dimen/text_size_small"
+                    android:textSize="10sp"
                     android:id="@+id/txt_count_cart"
                     />
                 <ImageView
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
+                    android:layout_width="25dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginEnd="@dimen/standard_margin"
                     android:scaleType="centerCrop"
                     android:layout_gravity="center_vertical"
