--- a/app/src/main/res/layout/toolbar_main.xml
+++ b/app/src/main/res/layout/toolbar_main.xml
@@ -24,14 +24,15 @@
                 android:layout_height="match_parent">
                 <LinearLayout
                     android:layout_width="0dp"
-                    android:layout_weight=".5"
+                    android:layout_weight="1.2"
                     android:layout_height="match_parent">
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:textColor="@color/white"
                         android:gravity="center_vertical"
-                        android:textSize="@dimen/text_size_standard"
+                        android:fontFamily="@font/vazir_medium"
+                        android:textSize="@dimen/txt_size_app_name_toolbar"
                         android:layout_marginStart="@dimen/large_margin"
                         android:text="@string/app_name"/>
                 </LinearLayout>
@@ -43,20 +44,21 @@
                     android:layout_height="match_parent">
                     <ImageView
                         android:layout_marginEnd="@dimen/standard_margin"
-                        android:layout_width="30dp"
+                        android:layout_width="25dp"
                         android:id="@+id/img_search"
                         android:layout_height="match_parent"
                         app:srcCompat="@drawable/ic_search_black_24dp"/>
+
                     <TextView
+                        android:id="@+id/txt_count_cart"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/white"
+                        android:fontFamily="@font/vazir_medium"
                         android:text="0"
-                        android:textSize="@dimen/text_size_small"
-                        android:id="@+id/txt_count_cart"
-                        />
+                        android:textColor="@color/white"
+                        android:textSize="10sp" />
                     <ImageView
-                        android:layout_width="30dp"
+                        android:layout_width="25dp"
                         android:layout_marginEnd="@dimen/large_margin"
                         android:id="@+id/img_shop_cart"
                         android:layout_height="match_parent"
