--- a/app/src/main/res/layout/toolbar_second.xml
+++ b/app/src/main/res/layout/toolbar_second.xml
@@ -22,11 +22,12 @@
             <TextView
                 android:id="@+id/txt_title_toolbar_second"
                 android:layout_width="wrap_content"
+                android:fontFamily="@font/vazir_medium"
                 android:text="@string/login"
                 android:layout_marginStart="@dimen/standard_margin"
                 android:textColor="@color/white"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/text_size_big"
+                android:textSize="@dimen/text_size_small"
                 />
 
 
