--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,21 +3,29 @@
     <color name="colorPrimary">#00B8D4</color>
     <color name="colorPrimaryDark">#00B8D4</color>
     <color name="colorAccent">#13929E</color>
-    <color name="green">#29B617</color>
-    <color name="black">#000000</color>
-    <color name="yellow">#FFFA00</color>
-    <color name="colorPrimaryDarkForNavigation">#8B00B8D4</color>
-    <color name="nav_background">#BF232524</color>
+
+    <color name="bg_for_itemshow">#ffffff</color>
+    <color name="gray_light_for_bg_itemshow">#FFFFFF</color>
+    <color name="gray_light_for_bg_activity">#EEEEEE</color>
+    <color name="gray_light">#EBE9E9</color>
+    <color name="gray_for_littile_view">#7ABEBEBE</color>
     <color name="gray">#585858</color>
-    <color name="gray_light">#D1D0D0</color>
     <color name="small_lines_background">#40292424</color>
+    <color name="nav_background">#56232524</color>
+    <color name="black">#000000</color>
+
+    <color name="pink">#C40970</color>
+    <color name="cyan">#861375</color>
     <color name="red">#9C0707</color>
+    <color name="gold">#FDD50F</color>
+
+    <color name="yellow">#FFFA00</color>
+    <color name="green">#29B617</color>
+
+    <color name="colorPrimaryDarkForNavigation">#8B00B8D4</color>
     <color name="light_blue">#07909C</color>
     <color name="dark_blue">#04356F</color>
-    <color name="pink">#C40970</color>
-    <color name="bg_for_itemshow">#ffffff</color>
-    <color name="gray_light_for_bg_itemshow">#DADADA</color>
-    <color name="gray_light_for_bg_activity">#DADADA</color>
-    <color name="gray_for_littile_view">#7ABEBEBE</color>
+    <color name="color_txt_title_recyc_mainactivity">#000000</color>
+
 
 </resources>
